[package]
name = "ar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
env_logger = "0.11.1"
tokio = { version = "1.36.0", features = ["full"] }
log = "0.4.0"
daemonize = "0.5.0"